[package]
name = "yengine"
version = "0.0.3"
edition = "2024"
keywords = ["yate", "extmodule", "telephony"]
description = "Communication library for the Yate Engine external module protocol."
documentation = "https://docs.rs/yengine"
repository = "https://github.com/lowlevl/yengine"
license = "LGPL-3.0"
readme = "README.md"

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures = "0.3.31"

tracing = "0.1.43"
thiserror = "2.0.17"

facet = { version = "0.34.0", features = ["reflect"] }
